--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -36,8 +36,8 @@
                 
                 <label class="form-label">Datos de instructivo</label>
                 <div class="input-group mb-3">
-                    <span class="input-group-text">Codigo "FGG"(*)</span>
-                    <input type="text" class="form-control" placeholder="Codigo instructivo" formControlName="codigoDocument">
+                    <span class="input-group-text">Codigo "I-GI-02"(*)</span>
+                    <input type="text" class="form-control" [placeholder]="ultimoCod" formControlName="codigoDocument">
                 </div>
 
                 <div class="col-6">
@@ -73,7 +73,6 @@
                         <span class="fw-medium">Registrar</span>
                     </button>
                 </div>   
-
             </div>
         </form>
     </div>
