--- a/src/app/components/consult/consult.component.html
+++ b/src/app/components/consult/consult.component.html
@@ -1,10 +1,10 @@
 <div class="conteiner d-flex justify-content-center">
-    <div class="row w-100">
+    <div class="w-100">
         <div class="title text-center">
             <h2>CONSULTA DE INSTRUCTIVOS</h2>           
         </div>
 
-        <div class="row rounded p-3 border">
+        <div class="rounded p-3 border">
             <form class="mt-1" [formGroup]="formSerch">
                 <div class="row">
                     <div class="col-6">
@@ -45,12 +45,12 @@
                     </tbody>
                 </table>
             </div>
-            <div>
-                <!--<pdf-viewer [src]="urldocument"
-                [render-text]="true"
-                [original-size]="false"
-                style="width: 400px; height: 500px">
-                </pdf-viewer>-->
+            <div *ngIf="urldocument" class="border">
+                <pdf-viewer [src]="urldocument"
+                            [render-text]="true"
+                            [original-size]="false"
+                            style="width: 100%; height: 400px">
+                </pdf-viewer>
             </div>
         </div>
     </div>
