--- a/src/app/components/documents/documents.component.html
+++ b/src/app/components/documents/documents.component.html
@@ -5,13 +5,13 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/document/consult">Consultar</a>
               </li>
-              <li class="nav-item">
+              <li *ngIf="rol === 'Ingeniero' || rol === 'Administrador'" class="nav-item">
                 <a class="nav-link" routerLink="/document/register">Registrar</a>
               </li>
-              <li class="nav-item">
+              <li *ngIf="rol === 'Ingeniero' || rol === 'Administrador'" class="nav-item">
                 <a class="nav-link" routerLink="/document/update">Actualizar</a>
               </li>
-              <li class="nav-item" routerLinkActive="active">
+              <li *ngIf="rol === 'Administrador'" class="nav-item">
                 <a class="nav-link" routerLink="/document/delete">Eliminar</a>
               </li>
               <li class="nav-item float-end exit" routerLinkActive="active" (click)="exit()">
